--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "node": ">=20"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.10",
+    "@11ty/eleventy": "^3.0.0-alpha.13",
     "@11ty/eleventy-img": "^5.0.0-beta.4",
+    "react-dom": "^18.3.1",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-bundle": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
