--- a/package.json
+++ b/package.json
@@ -18,13 +18,14 @@
   "devDependencies": {
     "@11ty/eleventy": "^3.0.0-alpha.13",
     "@11ty/eleventy-img": "^5.0.0-beta.4",
-    "react-dom": "^18.3.1",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-bundle": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "luxon": "^3.4.4",
     "markdown-it-anchor": "^9.0.1",
-    "prettier": "^3.2.5"
+    "prettier": "^3.2.5",
+    "jsx-async-runtime": "^0.2.1",
+    "tsx": "^4.15.5"
   }
 }
