--- a/package.json
+++ b/package.json
@@ -22,10 +22,13 @@
     "@11ty/eleventy-plugin-bundle": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "happy-dom": "^14.12.0",
+    "jsx-async-runtime": "^0.2.1",
     "luxon": "^3.4.4",
     "markdown-it-anchor": "^9.0.1",
+    "@testing-library/dom": "^10.1.0",
     "prettier": "^3.2.5",
-    "jsx-async-runtime": "^0.2.1",
-    "tsx": "^4.15.5"
+    "tsx": "^4.15.5",
+    "vitest": "^1.6.0"
   }
 }
