--- a/package.json
+++ b/package.json
@@ -16,16 +16,17 @@
     "node": ">=20"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.13",
+    "@11ty/eleventy": "^3.0.0-alpha.14",
     "@11ty/eleventy-img": "^5.0.0-beta.4",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-bundle": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^1.2.0",
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
+    "@testing-library/dom": "^10.1.0",
+    "@types/luxon": "^3.4.2",
     "happy-dom": "^14.12.0",
     "luxon": "^3.4.4",
     "markdown-it-anchor": "^9.0.1",
-    "@testing-library/dom": "^10.1.0",
     "preact": "^10.22.0",
     "preact-render-to-string": "^6.5.5",
     "prettier": "^3.2.5",
