Re-nest data and finish blog archive page.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,6 @@
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
   },
-  "incluse": ["content", "components"],
+  "include": ["content", "components"],
   "exclude": ["node_modules", "_site"]
 }
