--- a/package.json
+++ b/package.json
@@ -24,10 +24,11 @@
     "@11ty/eleventy-plugin-syntaxhighlight": "^5.0.0",
     "@testing-library/dom": "^10.3.1",
     "@types/luxon": "^3.4.2",
+    "@types/node": "^20.14.10",
     "happy-dom": "^14.12.3",
+    "jsx-async-runtime": "^0.4.2",
     "luxon": "^3.4.4",
     "markdown-it-anchor": "^9.0.1",
-    "jsx-async-runtime": "^0.4.2",
     "prettier": "^3.3.2",
     "tsx": "^4.16.2",
     "vitest": "^2.0.1"
