--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "node": ">=20"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^3.0.0-alpha.17",
-    "@11ty/eleventy-img": "^5.0.0-beta.6",
+    "@11ty/eleventy": "3.0.0-alpha.17",
+    "@11ty/eleventy-img": "^5.0.0-beta.9",
     "@11ty/eleventy-navigation": "^0.3.5",
     "@11ty/eleventy-plugin-bundle": "^2.0.2",
     "@11ty/eleventy-plugin-rss": "^2.0.1",
@@ -26,7 +26,7 @@
     "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.10",
     "happy-dom": "^14.12.3",
-    "jsx-async-runtime": "^0.4.2",
+    "jsx-async-runtime": "^0.5.0",
     "luxon": "^3.4.4",
     "markdown-it-anchor": "^9.0.1",
     "prettier": "^3.3.2",
